--- a/index.html
+++ b/index.html
@@ -5,9 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <input type="button" onclick="game()">
+    <div id="wrapper">
+        <div id="game">
+            <div class="game row" id="title">
+                <h1 class="title">  ROCK PAPER SCISSORS  </h1>
+            </div>
+            <div class="game row" id="gameplay">
+                <div  id="playsel"></div>
+                <div class="messageboard">
+                    <div class="start"><button id="start" value="START">START</button></div>
+                    <div class="scoreboard">
+                        <div class="score player" ><p class="scores" id="playscore"></p></div>
+                        <div class="score computer"><p class="scores" id="compscore"></p></div>
+                    </div>
+                    <div class="messages">
+                        <p id="message"></p>
+                    </div>
+                 </div>
+                <div id="compsel"></div>
+            </div>
+            <div class="game row" id="choice">
+                
+            </div>
+        </div>
+
+    </div>
     <script src="rps.js">
 
     </script>
