Finish program code, all functions work.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 <div id="compsel"></div>
             </div>
             <div class="game row" id="choice">
+                <div class="rps click rock1" id="rock"></div>
+                <div class="rps click paper1" id="paper"></div>
+                <div class="rps click scissors1" id="scissors"></div>
+
                 
             </div>
         </div>
